<resources>
    <string name="app_name">Libreria Multimedia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Acceptar">Acceptar</string>
    <string name="login">Acceder</string>
</resources>